# gdextension-template

./: .gitignore  CMakeLists.txt  README.md  build.sh  gdextension_file_generator.py
extensions/extension/: CMakeLists.txt
extensions/extension/src/: register_types.cpp
extensions/extension/src/sources/: Test.cpp
include/: Test.h  register_types.h
src/: Test.cpp  register_types.cpp
